# Sunlight

./: .editorconfig  .gitattributes  .gitignore  CMakeLists.txt  Dockerfile  LibrariesLicenses.md  README.md  Sunlight.cpp  Sunlight.sln  Sunlight.vcxproj  main.cpp  packages.config
datas/: FakeData-1.mtl
datas/26_HOTEL_POLICE_LYON/3DUSE_Output/_BATI/3689_10348_BATI/: 2016-01-01.csv
datas/26_HOTEL_POLICE_LYON/RawGML/: 26_HOTEL_POLICE_LYON.gml
datas/26_HOTEL_POLICE_LYON/_BATI/3689_10348/: 3689_10348_BATI.gml
datas/3DUSE_Output/_BATI/26_HOTEL_POLICE_LYON/: 2016-01-01.csv
datas/Sunlight/: logFile.txt
docs/: How-to-create-bouding-box-files.md  Installation-Guide.md  Pipeline_Activity_Chart.drawio  Roadmap.md
src/: main.cpp
src/ADE/: ADE.cpp  ADE.h
src/ADE/document/: DocumentHandler.cpp  DocumentHandler.h  DocumentObject.cpp  DocumentObject.h  Reference.cpp  Reference.h  Tag.cpp  Tag.h
src/ADE/temporal/: TemporalHandler.cpp  TemporalHandler.h  Transaction.cpp  Transaction.h  Version.cpp  Version.h  VersionTransition.cpp  VersionTransition.h  Workspace.h
src/citygmls/: Appearance.cpp  Appearance.h  AppearanceManager.cpp  AppearanceManager.h  CityGml.h  CityGmlTypes.h  CityModel.cpp  CityModel.h  CityObject.cpp  CityObject.h  Envelope.cpp  Envelope.h  GeoReferencedTexture.cpp  GeoReferencedTexture.h  GeoTransform.h  Geometry.cpp  Geometry.h  LinearRing.cpp  LinearRing.h  Material.cpp  Material.h  Object.cpp  Object.h  OsgCityGML.cpp  OsgCityGML.h  ParserParams.cpp  ParserParams.h  Polygon.cpp  Polygon.h  Tesselator.cpp  Tesselator.h  Texture.cpp  Texture.h  Tile.cpp  Tile.h  URI.cpp  URI.h
src/cores/: API.cpp  API.h  FileInfo.cpp  FileInfo.h  IO.cpp  IO.h  SunDatas.h  SunlightCsvExporter.cpp  SunlightCsvExporter.h  SunlightDetection.cpp  SunlightDetection.h  SunlightObjExporter.cpp  SunlightObjExporter.h
src/maths/: AABB.cpp  AABB.h  Hit.cpp  Hit.h  Quaternion.cpp  Quaternion.h  Ray.cpp  Ray.h  RayBox.cpp  RayBox.h  RayBoxHit.h  RayHit.h  RayTracing.cpp  RayTracing.h  Triangle.cpp  Triangle.h  Vector2.h  Vector3.h  Vector4.h  Vectors.h  maths.h
src/parsers/: AABBParser.cpp  AABBParser.h  Parser.cpp  Parser.h  ParserLibXml2.cpp  ParserLibXml2.h  SunEarthParser.cpp  SunEarthParser.h  TiledFilesLayout.cpp  TiledFilesLayout.h
src/tests/: CompareOutputWith3DUse.cpp  intersection_test.h
src/utils/: DateTime.cpp  DateTime.h  Log.cpp  Log.h  Timer.cpp  Timer.h  Utils.cpp  Utils.h
x64/Release/: Sunlight.exe.recipe  Sunlight.iobj  Sunlight.ipdb  Sunlight.vcxproj.FileListAbsolute.txt
x64/Release/Sunlight.tlog/: CL.command.1.tlog  CL.read.1.tlog  CL.write.1.tlog  Cl.items.tlog  Sunlight.lastbuildstate  link.command.1.tlog  link.read.1.tlog  link.write.1.tlog  link.write.2u.tlog
